# signal-mcp

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  SESSION_COMPLETION_SUMMARY.md
.topos/: GOKO_DUCKDB_UNIFIED_17_QUERIES.md  GOKO_TOPOS_IMPLEMENTATION_PLAN.md  GOKO_TOPOS_NAVIGATOR_ARCHITECTURE.md  GOKO_TOPOS_NAVIGATOR_TEST_RESULTS.md  GOKO_UNIFIED_IMPLEMENTATION_COMPLETE.md  JRUBY_WEBVM_INSTALLATION_CURRICULUM.md  JRUBY_WEBVM_QUICKSTART.sh  JRUBY_WEBVM_SUMMARY.md  ORGBABEL_CURRICULUM_COMPLETE.md  README.md  SIGNAL_MCP_69_COGNITIVE_MOMENTS.md  SIGNAL_MCP_69_COGNITIVE_MOMENTS_CONTINUATION.md  SIGNAL_MCP_69_COGNITIVE_MOMENTS_MERGED.md  SIGNAL_MCP_ARCHITECTURAL_SPECIFICATION.md  SIGNAL_MCP_DECLARATIVE_SUCCESS_SPECIFICATION.md  SIGNAL_MCP_INDEX.md  SIGNAL_MCP_ULTRATHINK_SUMMARY.md  TEST_CURRICULUM.org  TOPOI.md  TOPOS_NAVIGATOR_COMPATIBILITY_COMPLETE.md  TOPOS_NAVIGATOR_CURRICULUM.org  ob-jank.el  run-curriculum.el
docs/: spivak_diagrams.tex
examples/: stdio.rs
src/: error.rs  gay_bridge.rs  gay_colors.rs  gay_loom.rs  lib.rs  photonic.rs  prompts.rs  resources.rs  server.rs  sparse.rs  spivak.rs  symmetric.rs  teleport.rs  tools.rs  types.rs  xenomind.rs  xenomodern_tui.rs
